# yarpGPT

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  integration_test.sh  run_unit_test.sh
.devcontainer/: devcontainer.json
app/conf/: fakeLLMDevice.xml  tryDevice.xml  yarpGPT.ini
docker/: build_docker.sh  docker-compose-test.yml  start_docker.sh
gui/: CMakeLists.txt  ConversationModel.cpp  ConversationModel.h  FakeConversation.h  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui
playground/: PromptEtapas.txt  hugging.ipynb
playground/try/: CMakeLists.txt  try.cpp
scripts/: docker-compose-gui.yml  testgui.sh
src/: CMakeLists.txt
src/c++/: CMakeLists.txt
src/c++/GPT_nwc_yarp/: CMakeLists.txt  GPT_nwc_yarp.cpp  GPT_nwc_yarp.h
src/c++/GPT_nws_yarp/: CMakeLists.txt  GPTServerImpl.cpp  GPTServerImpl.h  GPT_nws_yarp.cpp  GPT_nws_yarp.h
src/c++/device/: CMakeLists.txt  GPTDevice.cpp  GPTDevice.hpp  ILLM.hpp
src/c++/device/FakeGPTDevice/: CMakeLists.txt  FakeGPTDevice.cpp  FakeGPTDevice.hpp
src/c++/device/FakeLLMDevice/: CMakeLists.txt  FakeLLMDevice.cpp  FakeLLMDevice.hpp
src/c++/device/GPTDevice/: CMakeLists.txt  GPTDevice.cpp  GPTDevice.hpp
src/c++/example/: CMakeLists.txt  example.cpp
src/c++/module/: CMakeLists.txt  main.cpp  yarpGPT.cpp  yarpGPT.h
src/c++/src/: yarpGPT.cpp  yarpGPT.h  yarpGTP.cpp
src/c++/thrift/: CMakeLists.txt  IGPTMsgs.thrift
src/python/yarpGPT/: api.py
tests/: test_yarpflow.py
tests/conf/: yarpGPT_integration_test.ini
tests/integration/: integration.py  test_integration.py
tests/unit/: test_core.py
yarpGPT/: __main__.py  api.py  apiconf.py
